--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 src_dir = d:\platformio\ESP32Heisha\src
 build_dir = d:\platformio\ESP32Heisha\.pioenvs
 build_cache_dir = d:\platformio\ESP32Heisha\.cache
-default_envs = d1_mini_h1_ota
-;default_envs = ESP_USB
+;default_envs = d1_mini_h1_ota
+default_envs = ESP_USB
 extra_configs = platformio_user_env.ini
 
 [common]
@@ -113,7 +113,7 @@ lib_deps =
 [scripts_defaults]
 extra_scripts = 
 	piotools/name-firmware.py
-;	piotools/littlefsbuilder.py
+	piotools/littlefsbuilder.py
 
 [esp32_defaults]
 
@@ -124,4 +124,4 @@ upload_protocol = esptool
 upload_speed = 921600
 ;upload_speed = 115200
 monitor_speed = 115200
-upload_port = COM3
+upload_port = COM5
