Add PCB pictures & set nodebug compilation option

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ build_flags =
 upload_flags = 
 
 [env:ESP_USB]
-build_type = debug
+;build_type = debug
 platform_packages = framework-arduinoespressif32
 platform = espressif32
 board = esp32doit-devkit-v1
