Upgrade functionalities to ver 3.2.3

--- a/platformio_user_env_sample.ini
+++ b/platformio_user_env_sample.ini
@@ -7,14 +7,14 @@
 [ota_defaults_h1]
 upload_port             = 192.168.1.116 ; ESP32 HeishaMon IP
 upload_flags            = --auth=your_password  ; password for OTA firmware update
-                          --host_ip=192.168.1.xxx  
+;                          --host_ip=192.168.1.xxx  
                           --host_port=10111
 upload_protocol         = espota
 
 [ota_defaults_h2]
 upload_port             = 192.168.2.193 
 upload_flags            = --auth=your_password  
-                          --host_ip=192.168.1.xxx
+;                          --host_ip=192.168.1.xxx
                           --host_port=10111
 upload_protocol         = espota
 
