Improved S0 pulse counting, Fixed Vcc reading error with ESP32. Due to the lack of voltage measurement functionality on the ESP32 platform, the Vcc value has been set to 3.3 V for compatibility with HA Integration. Correct presentation of parameters reported from ESP32 in HA.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 src_dir = src
 build_dir = .pioenvs
 build_cache_dir = .cache
-default_envs = ESP_USB
-;default_envs = d1_mini_h1_ota
+
+default_envs = UART_HMBoth_v3_2_3
+;default_envs = OTA_HMBoth_v3_2_3
 
 extra_configs = platformio_user_env.ini
 ;IMPORTANT !!!!!!!!!!
@@ -52,7 +53,7 @@ build_flags =
 	-D MMU_SEC_HEAP_SIZE=0x4000
 upload_flags = 
 
-[env:ESP_USB]
+[env:UART_HMBoth_v3_2_3]
 ;build_type = debug
 platform_packages = framework-arduinoespressif32
 platform = espressif32
@@ -79,7 +80,7 @@ lib_deps =
 	${common.lib_deps}
 
 
-[env:d1_mini_h1_ota]
+[env:OTA_HMBoth_v3_2_3]
 platform_packages = framework-arduinoespressif32
 platform = espressif32
 board = esp32doit-devkit-v1
@@ -93,30 +94,9 @@ check_tool = clangtidy
 check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
 board_build.filesystem = littlefs
 board_build.flash_mode = qio
-upload_protocol = ${ota_defaults_h1.upload_protocol}
-upload_flags = ${ota_defaults_h1.upload_flags}
-upload_port = ${ota_defaults_h1.upload_port}
-extra_scripts = ${scripts_defaults.extra_scripts}
-lib_deps = 
-	${common.lib_deps}
-
-[env:d1_mini_h2_ota]
-platform_packages = framework-arduinoespressif32
-platform = espressif32
-board = esp32doit-devkit-v1
-board_build.partitions = partitions.csv
-framework = arduino
-build_flags = 
-	${common.build_flags}
-build_unflags = -Wall
-monitor_speed = 115200
-check_tool = clangtidy
-check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
-board_build.filesystem = littlefs
-board_build.flash_mode = qio
-upload_protocol = ${ota_defaults_h2.upload_protocol}
-upload_flags = ${ota_defaults_h2.upload_flags}
-upload_port = ${ota_defaults_h2.upload_port}
+upload_protocol = ${OTA_HMBoth_v3_2_3.upload_protocol}
+upload_flags = ${OTA_HMBoth_v3_2_3.upload_flags}
+upload_port = ${OTA_HMBoth_v3_2_3.upload_port}
 extra_scripts = ${scripts_defaults.extra_scripts}
 lib_deps = 
 	${common.lib_deps}
