--- a/platformio.ini
+++ b/platformio.ini
@@ -12,33 +12,21 @@
 src_dir = src
 build_dir = .pioenvs
 build_cache_dir = .cache
-
-default_envs = UART_HMBoth_v3_2_3
-;default_envs = OTA_HMBoth_v3_2_3
-
+default_envs = UART_HMBoth_v3_8
 extra_configs = platformio_user_env.ini
-;IMPORTANT !!!!!!!!!!
-;IMPORTANT !!!!!!! put your sensitive data to platformio_user_env_sample.ini and rename to platformio_user_env.ini 
-;IMPORTANT !!!!!!!!!!
+lib_dir = .lib
 
 [common]
 lib_deps = 
-
-	knolleary/PubSubClient@^2.8
-	bblanchon/ArduinoJson@6.18.5
-	paulstoffregen/Time@^1.6.1
-	khoih-prog/ESP_WifiManager@^1.12.1
-	links2004/WebSockets@2.3.6
-	paulstoffregen/OneWire@^2.3.7
-	milesburton/DallasTemperature@3.10.0
-	
-
+	knolleary/PubSubClient @ ^2.8.0
+	bblanchon/ArduinoJson @ 7.2.1
+	PaulStoffregen/OneWire@ ^2.3.8
+	milesburton/DallasTemperature @ ^3.11.0
 build_flags = 
 	-DESPHOME_LOG_LEVEL=ESPHOME_LOG_LEVEL_WARN
 	-DUSE_ARDUINO
 	-DUSE_ESP32
-	;-DUSE_ESP32_FRAMEWORK_ARDUINO
-	;-DUSE_ESP32_VARIANT_ESP32
+	
 	-Wno-sign-compare
 	-Wno-unused-but-set-variable
 	-Wno-unused-variable
@@ -46,16 +34,13 @@ build_flags =
 	-D NDEBUG
 	-Wl,-Map,firmware.map
 	-DSERIAL_BUFFER_SIZE=256
-	;-D MMU_IRAM_SIZE=0x8000
-	;-D MMU_ICACHE_SIZE=0x4000
 	-D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM32_SECHEAP_NOTSHARED
 	-D MMU_SEC_HEAP=0x40108000
 	-D MMU_SEC_HEAP_SIZE=0x4000
 upload_flags = 
 
-[env:UART_HMBoth_v3_2_3]
-;build_type = debug
-platform_packages = framework-arduinoespressif32
+[env:UART_HMBoth_v3_8]
+build_type = debug
 platform = espressif32
 board = esp32doit-devkit-v1
 board_build.partitions = partitions.csv
@@ -66,7 +51,6 @@ check_tool = clangtidy
 check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
 board_build.filesystem = littlefs
 board_build.flash_mode = qio
-;board_build.flash_mode = dio
 upload_resetmethod = ${usb_defaults.upload_resetmethod}
 upload_speed = ${usb_defaults.upload_speed}
 upload_protocol = ${usb_defaults.upload_protocol}
@@ -78,10 +62,13 @@ build_flags =
 	${common.build_flags}
 lib_deps = 
 	${common.lib_deps}
+	adafruit/Adafruit NeoPixel@^1.12.3
+	milesburton/DallasTemperature@^3.9.0
+	bblanchon/ArduinoJson@^6.19.4
+	knolleary/PubSubClient@2.8.0
 
-
-[env:OTA_HMBoth_v3_2_3]
-platform_packages = framework-arduinoespressif32
+[env:OTA_HMBoth_v3_8]
+platform_packages = platformio/espressif32
 platform = espressif32
 board = esp32doit-devkit-v1
 board_build.partitions = partitions.csv
@@ -100,6 +87,10 @@ upload_port = ${OTA_HMBoth_v3_2_3.upload_port}
 extra_scripts = ${scripts_defaults.extra_scripts}
 lib_deps = 
 	${common.lib_deps}
+	adafruit/Adafruit NeoPixel@^1.12.3
+	milesburton/DallasTemperature@^3.9.0
+	bblanchon/ArduinoJson@^6.19.4
+	knolleary/PubSubClient@2.8.0
 
 [scripts_defaults]
 extra_scripts = 
@@ -113,4 +104,9 @@ upload_speed = 921600
 monitor_speed = 115200
 upload_port = COM7
 
+[ota_defaults]
 
+[OTA_HMBoth_v3_8]
+upload_port = 192.168.1.92
+upload_flags = --auth=heisha
+upload_protocol = espota
