--- a/platformio_user_env_sample.ini
+++ b/platformio_user_env_sample.ini
@@ -6,7 +6,7 @@
 
 
 [ota_defaults]
-[OTA_HMBoth_v3_2_3a]
+[OTA_HMBoth_v3_8]
 upload_port             = 192.168.1.112 ; ESP32 HeishaMon IP
 upload_flags            = --auth=your_password  ; password for OTA firmware update this same as in the  Settings page
 ;                          --host_ip=192.168.1.xxx  
