--- a/platformio.ini
+++ b/platformio.ini
@@ -81,9 +81,9 @@ check_tool = clangtidy
 check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
 board_build.filesystem = littlefs
 board_build.flash_mode = qio
-upload_protocol = ${OTA_HMBoth_v3_2_3.upload_protocol}
-upload_flags = ${OTA_HMBoth_v3_2_3.upload_flags}
-upload_port = ${OTA_HMBoth_v3_2_3.upload_port}
+upload_protocol = ${OTA_HMBoth_v3_8.upload_protocol}
+upload_flags = ${OTA_HMBoth_v3_8.upload_flags}
+upload_port = ${OTA_HMBoth_v3_8.upload_port}
 extra_scripts = ${scripts_defaults.extra_scripts}
 lib_deps = 
 	${common.lib_deps}
