--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ src_dir = src
 build_dir = .pioenvs
 build_cache_dir = .cache
 ;default_envs = OTA_HMBoth_v3_9
-default_envs = OTA_HMBoth_v3_9
+default_envs = UART_HMBoth_v3_9
 lib_dir = lib
 
 [common]
@@ -51,11 +51,11 @@ board = esp32doit-devkit-v1
 board_build.partitions = partitions.csv
 framework = arduino
 build_unflags = -Wall
-;monitor_speed = 115200
-monitor_speed = 9600
+monitor_speed = 115200
+;monitor_speed = 9600
 check_tool = clangtidy
 check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
-board_build.filesystem = littlefs
+board_build.filesystem = littlefs/
 board_build.flash_mode = qio
 upload_resetmethod = ${usb_defaults.upload_resetmethod}
 upload_speed = ${usb_defaults.upload_speed}
@@ -103,12 +103,12 @@ upload_protocol = esptool
 upload_speed = 921600
 ;monitor_speed = 115200
 monitor_speed = 9600
-upload_port = COM7
+upload_port = COM16
 
 [ota_defaults]
 
 [OTA_HMBoth_v3_8]
-upload_port = 192.168.1.125
+upload_port = 192.168.1.124
 upload_flags = 	--auth=heisha
 				--port=8266
 upload_protocol = espota
