--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 src_dir = src
 build_dir = .pioenvs
 build_cache_dir = .cache
-;default_envs = OTA_HMBoth_v3_9
-default_envs = UART_HMBoth_v3_9
+default_envs = OTA_HMBoth_v3_9
+;default_envs = UART_HMBoth_v3_9
 lib_dir = lib
 
 [common]
