Added the md5-generator.py script and now Platformio automatically generates the MD5 checksum during compilation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,8 +94,11 @@ lib_deps =
 
 [scripts_defaults]
 extra_scripts = 
-	piotools/name-firmware.py
+	post:piotools/name-firmware.py
+	post:piotools/md5-generator.py
 	piotools/littlefsbuilder.py
+
+
 
 [usb_defaults]
 upload_resetmethod = nodemcu
@@ -108,7 +111,7 @@ upload_port = COM16
 [ota_defaults]
 
 [OTA_HMBoth_v3_8]
-upload_port = 192.168.1.124
+upload_port = 192.168.1.9
 upload_flags = 	--auth=heisha
 				--port=8266
 upload_protocol = espota
