Update version 3.9a and new PCB

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ default_envs = OTA_HMBoth_v3_9
 ;default_envs = UART_HMBoth_v3_9
 lib_dir = lib
 
+
 [common]
 lib_deps = 
 	knolleary/PubSubClient @ ^2.8.0
@@ -26,10 +27,12 @@ lib_deps =
 	plerup/EspSoftwareSerial @ ^8.2.0
 	OneWire
 	AsyncTCP
-	adafruit/Adafruit NeoPixel @ ^1.12.3
 
 build_flags = 
-	-DESPHOME_LOG_LEVEL=ESPHOME_LOG_LEVEL_WARN
+	-DCORE_DEBUG_LEVEL=LOG_LEVEL_VERBOSE  ;WARN ERROR INFO DEBUG VERBOSE
+    ;-DCONFIG_LOG_VERSION_1=1
+	-DCONFIG_LOG_VERSION_2=1
+	-Iinclude
 	-DUSE_ARDUINO
 	-DUSE_ESP32
 	-Wno-sign-compare
@@ -70,13 +73,20 @@ lib_deps =
 	${common.lib_deps}
 
 [env:OTA_HMBoth_v3_9]
-build_type = debug
-platform = espressif32
+;build_type = debug
+build_type = release
+;platform = espressif32 @ 6.4.0
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2024.08.11/platform-espressif32.zip
 board = esp32doit-devkit-v1
+board_build.mcu = esp32
 board_build.partitions = partitions.csv
 framework = arduino
 build_unflags = -Wall
-monitor_speed = 9600
+monitor_filters =
+	esp32_exception_decoder
+	log2file
+monitor_port = COM7
+monitor_speed = 115200
 check_tool = clangtidy
 check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
 board_build.filesystem = littlefs
@@ -106,12 +116,13 @@ upload_protocol = esptool
 upload_speed = 921600
 ;monitor_speed = 115200
 monitor_speed = 9600
-upload_port = COM16
+upload_port = COM7
 
 [ota_defaults]
 
 [OTA_HMBoth_v3_8]
-upload_port = 192.168.1.9
+upload_port = 192.168.0.236
+
 upload_flags = 	--auth=heisha
 				--port=8266
 upload_protocol = espota
